# ocaml-lib

./: .gitignore  dune-project
lib/: dune  expval.ml  expval.mli  opt.ml  opt.mli  phys.ml  phys.mli  res.ml  res.mli  result.ml  result.mli  whooie.ml
lib/math/: integrate.ml  integrate.mli  math.ml  search.ml  search.mli  solve.ml  solve.mli
src/: dune
