(lang dune 3.12)
(generate_opam_files true)
(name whooie)
(authors "whooie <wchooie@gmail.com>")

; (maintainers "whooie <wchooie@gmail.com>")
; (source (github whooie/CHANGEME))
; (license CHANGEME)
; (documentation https://CHANGEME.com)

(package
 (name whooie)
 (synopsis "CHANGEME")
 (description "CHANGEME")
 (depends
  ocaml
  dune
  ; owl
 )
 ; (tags (topics ...))
)